--- a/gb/24/11/11/n14368543.md
+++ b/gb/24/11/11/n14368543.md
@@ -19,38 +19,39 @@
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="http://dajiyuan.com.au/" data-cke-saved-href="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368549.md#1">阵亡将士纪念日 澳洲人默哀一分钟致敬</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368328.md#1">打击现代奴役 澳洲任命首位反奴役事务专员</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368402.md#1">悉尼乘客11月11日至14日可免费搭乘轻轨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368487.md#1">政府推出免费呼吸道合胞病毒疫苗计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368335.md#1">人手短缺 新州六成养老院未达护理目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14368273.md#1">Chemist Warehouse与Sigma合并获准</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368337.md#1">财长：澳洲有能力应对经济危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14368269.md#1">悉尼中餐馆员工起冲突 一男子持刀伤人被控</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14368286.md#1">Newspoll：反对党领袖达顿净支持率超过总理</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545193.md#1">悉尼内城联排别墅内现两具男尸已死数周</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545180.md#1">墨尔本托儿所虐待指控引发更广泛风险警告</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545084.md#1">前澳洲总理麦克马洪之子朱利安因病去世</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545036.md#1">悉尼两年轻女警遭袭 一人在暴力袭击中昏迷</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544591.md#1">数百万澳人靠遗产实现财务目标 专家警示风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544564.md#1">澳总理：政府应在经济发展中退居次位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544586.md#1">专家称7月份房贷利率下调“已成定局”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544568.md#1">澳军将获20亿国防投资 提升远程打击能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544503.md#1">川普宣布关税后 澳洲退休基金上财年增长10%</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544548.md#1">疑似受雇杀人却找错目标 两未成年人被控谋杀</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/11/n10382929.md#1" target="_blank">共产暴政录：公私合营（工商改造）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/26/n9894912.md#1" target="_blank">毛泽东诗词被党媒“高级黑”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/1/n11491970.md#1" target="_blank">奥地利女子缘何修炼法轮功 答案让你意想不到</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364228.md#1">立冬养精蓄锐 补肾保养日常六招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/21/n14354767.md#1">捍卫战士：与年轻的自己对话（2/3）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363872.md#1">太白昼现女主昌 寇准再刚也无奈呀！（1）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364247.md#1">【未解之谜】5岁萌娃才智超50岁教授？神童的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14367919.md#1">【唐青看时事】川普获胜 拜登为何神秘微笑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367455.md#1">【未解之谜】石油的真相 取之不竭的能源？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366775.md#1">【新闻大家谈】川普胜选三大现象 中俄啥反应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/9/n14367603.md#1">郑州大学生大规模夜骑开封 官方如临大敌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367319.md#1">“习全票当选国家主席”获新闻头奖 被指高级黑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366817.md#1">赵丽颖顶着超短发造型拍新剧 网友直呼认不出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367390.md#1">主张创作自由遭霍启刚怒批 杜琪峯获同行力挺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367417.md#1">57岁黎明坐着唱快歌 超水准演出获夸赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366791.md#1">川普将重返白宫 蔡依林一首旧歌再度热传大陆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367069.md#1">传迪士尼真人《白马王子》电影找到女主角</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14368025.md#1">如何去除墙上的霉菌？ 专家推荐用这一物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/9/n14367601.md#1">为何你老是忘记事情？ 专家：这对大脑有益</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363112.md#1">常见“睡眠”误解！ 比睡满8小时更重要的事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364373.md#1">小病不求人 厨房即药房 5种天然急救良药</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364166.md#1">研究：十字花科蔬菜比其它蔬菜更能降低血压</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543930.md#1">人民日报刊文纪念李克强冥诞 求是网删文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543281.md#1">刘晓庆珠宝公司因民间借贷纠纷被执行44.9万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543287.md#1">综艺《出去一下》将开播 舒华、桂纶镁同台亮相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539895.md#1">强化免疫有三关 中医从脏腑打造防御屏障</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/11/n14368543.htm">高房价与生活成本压垮生育率</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368543.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
